// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Reinstall questionnaires list > view Blaise Status page matches Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="ons-page__main ons-u-mt-l"
        id="main-content"
      >
        <h1
          class="ons-u-mb-l"
        >
          Reinstall questionnaire
        </h1>
        <p>
          Reinstall a previously uploaded questionnaire. This will deploy the last uploaded version of the questionnaire.
        </p>
        <div
          class="elementToFadeIn"
        >
          <form>
            <fieldset
              class="ons-fieldset"
            >
              <legend
                class="ons-fieldset__legend"
              >
                Select a questionnaire to reinstall
              </legend>
              <div
                class="ons-radios__items"
              >
                <p
                  class="ons-radios__item"
                >
                  <span
                    class="ons-radio"
                  >
                    <input
                      aria-label="No"
                      class="ons-radio__input ons-js-radio "
                      id="install-OPN2004A.bpkg"
                      name="select-survey"
                      type="radio"
                      value="OPN2004A.bpkg"
                    />
                    <label
                      class="ons-radio__label "
                      for="install-OPN2004A.bpkg"
                    >
                      OPN2004A.bpkg
                    </label>
                  </span>
                </p>
                <br />
                <p
                  class="ons-radios__item"
                >
                  <span
                    class="ons-radio"
                  >
                    <input
                      aria-label="No"
                      class="ons-radio__input ons-js-radio "
                      id="install-LMS2101_BK2.bpkg"
                      name="select-survey"
                      type="radio"
                      value="LMS2101_BK2.bpkg"
                    />
                    <label
                      class="ons-radio__label "
                      for="install-LMS2101_BK2.bpkg"
                    >
                      LMS2101_BK2.bpkg
                    </label>
                  </span>
                </p>
                <br />
              </div>
            </fieldset>
            <br />
            <button
              class="ons-btn ons-btn--disabled"
              data-testid="confirm-install-button"
              disabled=""
              id="confirm-install"
              type="button"
            >
              <span
                class="ons-btn__inner"
              >
                <span
                  class="ons-btn__text"
                >
                  Continue
                </span>
              </span>
            </button>
          </form>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="ons-page__main ons-u-mt-l"
      id="main-content"
    >
      <h1
        class="ons-u-mb-l"
      >
        Reinstall questionnaire
      </h1>
      <p>
        Reinstall a previously uploaded questionnaire. This will deploy the last uploaded version of the questionnaire.
      </p>
      <div
        class="elementToFadeIn"
      >
        <form>
          <fieldset
            class="ons-fieldset"
          >
            <legend
              class="ons-fieldset__legend"
            >
              Select a questionnaire to reinstall
            </legend>
            <div
              class="ons-radios__items"
            >
              <p
                class="ons-radios__item"
              >
                <span
                  class="ons-radio"
                >
                  <input
                    aria-label="No"
                    class="ons-radio__input ons-js-radio "
                    id="install-OPN2004A.bpkg"
                    name="select-survey"
                    type="radio"
                    value="OPN2004A.bpkg"
                  />
                  <label
                    class="ons-radio__label "
                    for="install-OPN2004A.bpkg"
                  >
                    OPN2004A.bpkg
                  </label>
                </span>
              </p>
              <br />
              <p
                class="ons-radios__item"
              >
                <span
                  class="ons-radio"
                >
                  <input
                    aria-label="No"
                    class="ons-radio__input ons-js-radio "
                    id="install-LMS2101_BK2.bpkg"
                    name="select-survey"
                    type="radio"
                    value="LMS2101_BK2.bpkg"
                  />
                  <label
                    class="ons-radio__label "
                    for="install-LMS2101_BK2.bpkg"
                  >
                    LMS2101_BK2.bpkg
                  </label>
                </span>
              </p>
              <br />
            </div>
          </fieldset>
          <br />
          <button
            class="ons-btn ons-btn--disabled"
            data-testid="confirm-install-button"
            disabled=""
            id="confirm-install"
            type="button"
          >
            <span
              class="ons-btn__inner"
            >
              <span
                class="ons-btn__text"
              >
                Continue
              </span>
            </span>
          </button>
        </form>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Reinstall questionnaires list > view Blaise Status page matches Snapshot 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="ons-page__main ons-u-mt-l"
        id="main-content"
      >
        <h1
          class="ons-u-mb-l"
        >
          Reinstall questionnaire
        </h1>
        <p>
          Reinstall a previously uploaded questionnaire. This will deploy the last uploaded version of the questionnaire.
        </p>
        <div>
          <form>
            <fieldset
              class="ons-fieldset"
            >
              <legend
                class="ons-fieldset__legend"
              >
                Select a questionnaire to reinstall
              </legend>
              <div
                class="ons-radios__items"
              >
                <p
                  class="ons-radios__item"
                >
                  <span
                    class="ons-radio"
                  >
                    <input
                      aria-label="No"
                      class="ons-radio__input ons-js-radio "
                      id="install-OPN2004A.bpkg"
                      name="select-survey"
                      type="radio"
                      value="OPN2004A.bpkg"
                    />
                    <label
                      class="ons-radio__label "
                      for="install-OPN2004A.bpkg"
                    >
                      OPN2004A.bpkg
                    </label>
                  </span>
                </p>
                <br />
                <p
                  class="ons-radios__item"
                >
                  <span
                    class="ons-radio"
                  >
                    <input
                      aria-label="No"
                      class="ons-radio__input ons-js-radio "
                      id="install-LMS2101_BK2.bpkg"
                      name="select-survey"
                      type="radio"
                      value="LMS2101_BK2.bpkg"
                    />
                    <label
                      class="ons-radio__label "
                      for="install-LMS2101_BK2.bpkg"
                    >
                      LMS2101_BK2.bpkg
                    </label>
                  </span>
                </p>
                <br />
              </div>
            </fieldset>
            <br />
            <button
              class="ons-btn ons-btn--disabled"
              data-testid="confirm-install-button"
              disabled=""
              id="confirm-install"
              type="button"
            >
              <span
                class="ons-btn__inner"
              >
                <span
                  class="ons-btn__text"
                >
                  Continue
                </span>
              </span>
            </button>
          </form>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="ons-page__main ons-u-mt-l"
      id="main-content"
    >
      <h1
        class="ons-u-mb-l"
      >
        Reinstall questionnaire
      </h1>
      <p>
        Reinstall a previously uploaded questionnaire. This will deploy the last uploaded version of the questionnaire.
      </p>
      <div>
        <form>
          <fieldset
            class="ons-fieldset"
          >
            <legend
              class="ons-fieldset__legend"
            >
              Select a questionnaire to reinstall
            </legend>
            <div
              class="ons-radios__items"
            >
              <p
                class="ons-radios__item"
              >
                <span
                  class="ons-radio"
                >
                  <input
                    aria-label="No"
                    class="ons-radio__input ons-js-radio "
                    id="install-OPN2004A.bpkg"
                    name="select-survey"
                    type="radio"
                    value="OPN2004A.bpkg"
                  />
                  <label
                    class="ons-radio__label "
                    for="install-OPN2004A.bpkg"
                  >
                    OPN2004A.bpkg
                  </label>
                </span>
              </p>
              <br />
              <p
                class="ons-radios__item"
              >
                <span
                  class="ons-radio"
                >
                  <input
                    aria-label="No"
                    class="ons-radio__input ons-js-radio "
                    id="install-LMS2101_BK2.bpkg"
                    name="select-survey"
                    type="radio"
                    value="LMS2101_BK2.bpkg"
                  />
                  <label
                    class="ons-radio__label "
                    for="install-LMS2101_BK2.bpkg"
                  >
                    LMS2101_BK2.bpkg
                  </label>
                </span>
              </p>
              <br />
            </div>
          </fieldset>
          <br />
          <button
            class="ons-btn ons-btn--disabled"
            data-testid="confirm-install-button"
            disabled=""
            id="confirm-install"
            type="button"
          >
            <span
              class="ons-btn__inner"
            >
              <span
                class="ons-btn__text"
              >
                Continue
              </span>
            </span>
          </button>
        </form>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
